# jax-power

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
jaxpower/: __init__.py  bspec.py  cov2.py  cov3.py  fftlog.py  kernels.py  mesh.py  mesh2.py  mesh3.py  mock.py  particle2.py  particle3.py  pcount.py  power.py  pspec.py  pt.py  resamplers.py  rotation.py  types.py  utils.py
jaxpower/jax/: special.py
nb/: cov2.ipynb  cov2_cubic.ipynb  cov2_cutsky.ipynb  disconnected_covariance.ipynb  integral_constraint.ipynb  mesh.ipynb  mesh2.ipynb  mesh3.ipynb  multigrid.ipynb  multigrid_window.ipynb  multigrid_window.py  test_multigrid.ipynb
scripts/: .gitignore  abacus_hf.ipynb  abacus_hf.py  benchmark.ipynb  benchmark.py  desi.py  holi.ipynb  holi.py  rotation.ipynb  uchuu.ipynb  uchuu.py  window_abacus_hf.ipynb
tests/: test_bspec.py  test_cov2.py  test_cov3.py  test_mesh.py  test_mesh2.py  test_mesh3.py  test_particle2.py  test_particle3.py  test_pcount.py  test_power.py  test_pspec.py  test_pt.py  test_rotation.py  test_sharding.py  test_types.py
