[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
    "pip>=21.2",
]

[project]
name = "jax-power"
authors = [{name = "Arnaud de Mattia"}]
description = "JAX-powered power spectrum"
version = "0.2.0"
dependencies = ["jax", "jaxdecomp", "lsstypes @ git+https://github.com/adematti/lsstypes"]
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/adematti/jax-power"}
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
packages = ["jaxpower"]
